# EPFO-Scraper

./: .gitignore  README.md  main.py  payment_details.csv  pyproject.toml  requirements.txt
data/: KDMAL0094547000.xlsx  Payment Details.xlsx
