[tool.poetry]
name = "python-dev-coding-challenge"
version = "0.1.0"
description = ""
authors = ["bakharia"]
license = "MIT_LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"
pandas = "^2.2.0"
python-dotenv = "^1.0.1"
pyarrow = "^15.0.0"
fake-useragent = "^1.4.0"
xlsx2csv = "^0.8.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
